<resources>
    <string name="title">Percobaan</string>
    <string name="button1">Masuk</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="list_barang">List Barang</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lupa_password">Lupa Kata Sandi?</string>
    <string name="atau">ATAU</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="title_home">Home</string>
    <string name="title_laporan">Stock</string>
    <string name="title_barang">Scan QR</string>
    <string name="title_notifikasi">Report</string>
    <string name="title_statistik">Request</string>
    <string name="title_activity_bottom_navbar">bottom_navbar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_statistics">Stock</string>
    <string name="barang_kosong">Barang Kosong</string>
    <string name="barang_retur">Barang Retur</string>
    <string name="user_navbar">User</string>
    <string name="user">User</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dataString1">Barang Masuk</string>
    <string name="dataString2">Barang Keluar</string>
    <string name="dataString3">HOME</string>


    <string-array name="android_dropdown_arrays">
        <item>Pilih Jenis Barang</item>
        <item>Daftar Drop Down  1</item>
        <item>Daftar Drop Down  2</item>
        <item>Daftar Drop Down  3</item>
        <item>Daftar Drop Down  5</item>
        <item>Daftar Drop Down  6</item>
        <item>Daftar Drop Down  7</item>
        <item>Daftar Drop Down  8</item>
    </string-array>

    <string-array name="android_dropdown">
        <item>Pilih Lokasi Rak</item>
        <item>Daftar Drop Down  1</item>
        <item>Daftar Drop Down  2</item>
        <item>Daftar Drop Down  3</item>
        <item>Daftar Drop Down  5</item>
        <item>Daftar Drop Down  6</item>
        <item>Daftar Drop Down  7</item>
        <item>Daftar Drop Down  8</item>
    </string-array>

    <string-array name="android_dropdowntgl">
        <item>dd</item>
        <item>Daftar Drop Down  1</item>
        <item>Daftar Drop Down  2</item>
        <item>Daftar Drop Down  3</item>
        <item>Daftar Drop Down  5</item>
        <item>Daftar Drop Down  6</item>
        <item>Daftar Drop Down  7</item>
        <item>Daftar Drop Down  8</item>
    </string-array>

    <string-array name="android_dropdownbln">
        <item>mm</item>
        <item>Daftar Drop Down  1</item>
        <item>Daftar Drop Down  2</item>
        <item>Daftar Drop Down  3</item>
        <item>Daftar Drop Down  5</item>
        <item>Daftar Drop Down  6</item>
        <item>Daftar Drop Down  7</item>
        <item>Daftar Drop Down  8</item>
    </string-array>

    <string-array name="android_dropdownthn">
        <item>yyyy</item>
        <item>Daftar Drop Down  1</item>
        <item>Daftar Drop Down  2</item>
        <item>Daftar Drop Down  3</item>
        <item>Daftar Drop Down  5</item>
        <item>Daftar Drop Down  6</item>
        <item>Daftar Drop Down  7</item>
        <item>Daftar Drop Down  8</item>
    </string-array>
    <string-array name="android_dropdownmgg">
        <item>week</item>
        <item>Daftar Drop Down  1</item>
        <item>Daftar Drop Down  2</item>
        <item>Daftar Drop Down  3</item>
        <item>Daftar Drop Down  5</item>
        <item>Daftar Drop Down  6</item>
        <item>Daftar Drop Down  7</item>
        <item>Daftar Drop Down  8</item>
    </string-array>
    <string-array name="android_dropdownbarang">
        <item>week</item>
        <item>Daftar Drop Down  1</item>
        <item>Daftar Drop Down  2</item>
        <item>Daftar Drop Down  3</item>
        <item>Daftar Drop Down  5</item>
        <item>Daftar Drop Down  6</item>
        <item>Daftar Drop Down  7</item>
        <item>Daftar Drop Down  8</item>
    </string-array>
    <string-array name="android_dropdownkategori">
        <item>week</item>
        <item>Daftar Drop Down  1</item>
        <item>Daftar Drop Down  2</item>
        <item>Daftar Drop Down  3</item>
        <item>Daftar Drop Down  5</item>
        <item>Daftar Drop Down  6</item>
        <item>Daftar Drop Down  7</item>
        <item>Daftar Drop Down  8</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
