<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_laporan"
        android:icon="@drawable/box"
        android:title="@string/title_laporan" />

    <item
        android:id="@+id/navigation_barang"
        android:icon="@drawable/kode"
        android:title="@string/title_barang" />

    <item
        android:id="@+id/navigation_notifikasi"
        android:icon="@drawable/report"
        android:title="@string/title_notifikasi" />

    <item
        android:id="@+id/navigation_statistik"
        android:icon="@drawable/contact"
        android:title="@string/title_statistik" />

</menu>